# ROS2_Machine_Vision

./: README.md
camera_360_ws/install/: local_setup.sh  setup.sh
camera_360_ws/install/chironix_camera/lib/chironix_camera/: multi_camera_capture  multi_camera_stitcher
camera_360_ws/install/chironix_camera/share/chironix_camera/: package.xml
camera_360_ws/install/panorama_cam/lib/panorama_cam/: panorama_cam
camera_360_ws/install/panorama_cam/share/panorama_cam/: package.bash  package.dsv  package.ps1  package.sh  package.xml
camera_360_ws/install/panorama_cam/share/panorama_cam/launch/: panorama_cam.launch.py
camera_360_ws/install/surround_cam/lib/surround_cam/: surround_cam
camera_360_ws/install/surround_cam/share/surround_cam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
camera_360_ws/install/surround_cam/share/surround_cam/launch/: surround_cam.launch.py
camera_360_ws/log/: latest_build  latest_list
camera_360_ws/src/hackathon-2024-main/: .gitattributes  .gitignore  Dockerfile  compose.yaml  docker_shell.sh  ros-entrypoint.sh
camera_360_ws/src/hackathon-2024-main/.devcontainer/: devcontainer.json
camera_360_ws/src/hackathon-2024-main/workspace/src/chironix_image_pipeline/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
camera_360_ws/src/hackathon-2024-main/workspace/src/chironix_image_pipeline/bags/sample_usb_cam/: metadata.yaml  sample_usb_cam_uc_0.db3
camera_360_ws/src/hackathon-2024-main/workspace/src/chironix_image_pipeline/chironix_image_pipeline/: charuco_calibrator.py  charuco_calibrator_node.py  tf_ground_node.py
camera_360_ws/src/hackathon-2024-main/workspace/src/chironix_image_pipeline/chironix_image_pipeline/tests/: test_charuco_calibrator.py
camera_360_ws/src/hackathon-2024-main/workspace/src/chironix_image_pipeline/config/: camera_info.yaml  camera_param.yaml
camera_360_ws/src/hackathon-2024-main/workspace/src/chironix_image_pipeline/launch/: dev_image_pipeline_launch.xml
camera_360_ws/src/surround_cam/: package.xml  setup.cfg  setup.py
camera_360_ws/src/surround_cam/camera_info/: camera2_calibration.yaml  camera3_calibration.yaml  camera4_calibration.yaml
camera_360_ws/src/surround_cam/launch/: surround_cam.launch.py
camera_lidar_ws/install/: local_setup.sh  setup.sh
camera_lidar_ws/log/: latest_build  latest_list
camera_panorama_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
camera_panorama_ws/install/panorama_cam/share/panorama_cam/: package.sh
camera_panorama_ws/log/: latest_build  latest_list
camera_panorama_ws/src/install/: local_setup.sh  setup.sh
camera_panorama_ws/src/log/: latest_build
camera_panorama_ws/src/panorama_cam/: package.xml  setup.cfg  setup.py
camera_panorama_ws/src/panorama_cam/camera_info/: camera1_calibration.yaml
camera_panorama_ws/src/panorama_cam/install/: local_setup.sh  setup.sh
camera_panorama_ws/src/panorama_cam/log/: latest_build
camera_panorama_ws/src/panorama_cam/panorama_cam/: panorama_node.py  test.py
camera_stereo_ws/install/: local_setup.sh  setup.sh
camera_stereo_ws/install/camera_calibration/lib/camera_calibration/: cameracalibrator  cameracheck  tarfile_calibration
camera_stereo_ws/log/: latest_build  latest_list
camera_stereo_ws/src/stereo_camera/: CMakeLists.txt
camera_stereo_ws/src/stereo_camera/config/: right.ini
camera_stereo_ws/src/stereo_camera/launch/: stereo_camera.launch.xml
machineVisionImg/: SIFT
yolo_training/: Aruco.py  camera.py  object_detection.py  project.yaml  project_run.py  project_training.py
yolo_training/datasets/train/: labels.cache
yolo_training/datasets/train/labels/: image_0.txt  image_1.txt  image_10.txt  image_11.txt  image_12.txt  image_13.txt  image_14.txt  image_15.txt  image_16.txt  image_17.txt  image_18.txt  image_19.txt  image_2.txt  image_20.txt  image_21.txt  image_22.txt  image_23.txt  image_24.txt  image_25.txt  image_26.txt  image_27.txt  image_28.txt  image_29.txt  image_3.txt  image_30.txt  image_31.txt  image_32.txt  image_33.txt  image_34.txt  image_35.txt  image_36.txt  image_37.txt  image_38.txt  image_39.txt  image_4.txt  image_40.txt  image_41.txt  image_42.txt  image_43.txt  image_44.txt  (+11 more)
yolo_training/datasets/val/: labels.cache
yolo_training/datasets/val/labels/: image_0.txt  image_1.txt  image_2.txt  image_3.txt  image_4.txt  image_5.txt  image_6.txt  image_7.txt  image_8.txt
yolo_training/runs/detect/train/: args.yaml  results.csv
(+105 files in other folders)
