<package format="3">
  <name>panorama_cam</name>
  <version>0.1.0</version>
  <description>Stitch rectified images into a 360 image</description>

  <maintainer email="louisdinh@example.com">louisdinhh</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>