<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chironix_image_pipeline</name>
  <version>0.0.0</version>
  <description>Chironix Image Pipeline packages</description>
  <maintainer email="chironix.technical@chironix.com">Kyle</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>isaac_ros_image_proc</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>